# LiTO

./: README.md  SPECIFICA_CORE.scm
lito-kernel/: Cargo.toml
lito-kernel/src/: lib.rs  main.rs
lito-kernel/tests/: integration_test.rs
